--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1>Login</h1>
   <code>{{diagnostic}}</code>
   <form class="login-frm" (ngSubmit)="onSubmit()" #loginFrm="ngForm">
     <div class="row">
@@ -24,7 +25,7 @@
          <div class="form-group row">
             <label for="ngbPsw" class="col-xs-3 col-form-label">Password</label>
             <div class="col-xs-9">
-              <input type="password" class="form-control" id="ngbPsw" placeholder="Password" 
+              <input type="password" class="form-control" id="ngbPsw" placeholder="Password"
                 required
                 minlength="6"
                 [(ngModel)]="loginUser.password"
