--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" [@fadeIn]="void">
   <h1>Blog List</h1>
   <article>
     <ul class="list-unstyled article-list">
@@ -9,9 +9,9 @@
             <li class="list-inline-item">
               <i class="fa fa-calendar-o"></i> {{article.date | date:"yyyy/MM/dd"}}
             </li>
-            - 
+            -
             <li class="list-inline-item">
-              <i class="fa fa-user-circle"></i> {{article.author}} 
+              <i class="fa fa-user-circle"></i> {{article.author}}
             </li>
           </ul>
         </header>
