--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="card-container">
+<div class="card-container" [@fadeIn]="void">
   <h1 x-large class="sample-content">Your Content Here</h1>
 
   <hr>
