--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" [@fadeIn]="void">
   <h1>Login</h1>
   <code>{{diagnostic}}</code>
   <form class="login-frm" (ngSubmit)="onSubmit()" #loginFrm="ngForm">
