--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
 
   <div>
     For hot module reloading run
-    <pre>npm run start:hmr</pre>
+    <pre><code>npm run start:hmr</code></pre>
   </div>
 
   <hr>
