modify routes & nav link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,6 +40,7 @@
   <!-- main -->
   <main class="main">
     <router-outlet></router-outlet>
+    <!-- Routed views go here -->
   </main><!-- /main -->
 </div><!-- /wrap -->
 <!-- footer -->
