add article detail

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,16 +10,16 @@
       </a>
       <ul class="nav navbar-nav float-xs-right">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="home">Home</a>
+          <a class="nav-link" routerLink="/home">Home</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="blog">Blog</a>
+          <a class="nav-link" routerLink="/blog">Blog</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="about">About</a>
+          <a class="nav-link" routerLink="/about">About</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="login">Login</a>
+          <a class="nav-link" routerLink="/login">Login</a>
         </li>
         <!--<li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
