modify blog to article link

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,5 +1,5 @@
 <div class="container" [@fadeIn]="void">
-  <h1>Blog List</h1>
+  <h1>Article List</h1>
   <article>
     <ul class="list-unstyled article-list">
       <li class="article-item" *ngFor="let article of articleList">
