--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,9 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/admin">Admin</a>
+        </li>
         <!--<li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
           <div class="dropdown-menu" aria-labelledby="supportedContentDropdown">
