--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         <img class="d-inline-block align-top" style="width: 20px; height:20px;" src="{{angularclassLogo}}" alt="Logo">
         AngularBlog
       </a>
-      <ul class="nav navbar-nav float-xs-right">
+      <ul class="nav navbar-nav">
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/home">Home</a>
         </li>
@@ -33,10 +33,9 @@
           </div>
         </li>-->
       </ul>
-      <!--<form class="form-inline float-xs-right">
-        <input class="form-control" type="text" placeholder="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>-->
+      <form class="form-inline float-xs-right">
+        <button class="btn btn-success btn-sm">Write</button>
+      </form>
     </nav>
   </header><!-- /header -->
   <!--<alert type="success">hello</alert>-->
