add admin article/user

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,8 +1,14 @@
 <h1>Dashboard</h1>
-<nav>
-  <a routerLink="./" routerLinkActive="active"
+<ul class="nav">
+  <li class="nav-item">
+     <a class="nav-link" routerLink="./" routerLinkActive="active"
     [routerLinkActiveOptions]="{ exact: true }">Dashboard</a>
-  <a routerLink="./article" routerLinkActive="active">Manage Article</a>
-  <a routerLink="./user" routerLinkActive="active">Manage Users</a>
-</nav>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="./article" routerLinkActive="active">Manage Article</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="./user" routerLinkActive="active">Manage Users</a>
+  </li>
+</ul>
 <router-outlet></router-outlet>
