--- a/src/app/admin/article-manage/article-manage.component.html
+++ b/src/app/admin/article-manage/article-manage.component.html
@@ -1,1 +1,31 @@
 <h2>Article Manage</h2>
+<table class="table table-bordered table-hover">
+  <thead class="thead-inverse">
+    <tr>
+      <th>#</th>
+      <th>Article Name</th>
+      <th>Author</th>
+      <th>Last Modified</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Angular2</td>
+      <td>Thsi</td>
+      <td>2017/01/20 14:09:45</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Webpack</td>
+      <td>Thsi</td>
+      <td>2017/01/20 14:09:45</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>TypeScript</td>
+      <td>Thsi</td>
+      <td>2017/01/20 14:09:45</td>
+    </tr>
+  </tbody>
+</table>
