--- a/src/app/admin/tag-manage/tag-manage.component.html
+++ b/src/app/admin/tag-manage/tag-manage.component.html
@@ -1,10 +1,9 @@
-<h3>Article Manage</h3>
+<h3>Tag Manage</h3>
 <table class="table table-bordered table-hover">
   <thead class="thead-inverse">
     <tr>
       <th>#</th>
-      <th>Article Name</th>
-      <th>Author</th>
+      <th>Tag Name</th>
       <th>Last Modified</th>
       <th>Actions</th>
     </tr>
@@ -13,7 +12,6 @@
     <tr>
       <th scope="row">1</th>
       <td>Angular2</td>
-      <td>Thsi</td>
       <td>2017/01/20 14:09:45</td>
       <td>
         <button class="btn btn-primary btn-sm">
@@ -27,7 +25,6 @@
     <tr>
       <th scope="row">2</th>
       <td>Webpack</td>
-      <td>Thsi</td>
       <td>2017/01/20 14:09:45</td>
       <td>
         <button class="btn btn-primary btn-sm">
@@ -41,7 +38,6 @@
     <tr>
       <th scope="row">3</th>
       <td>TypeScript</td>
-      <td>Thsi</td>
       <td>2017/01/20 14:09:45</td>
       <td>
         <button class="btn btn-primary btn-sm">
