--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,14 +1,8 @@
 <h1>Dashboard</h1>
-<ul class="nav">
-  <li class="nav-item">
-     <a class="nav-link" routerLink="./" routerLinkActive="active"
-    [routerLinkActiveOptions]="{ exact: true }">Dashboard</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="./article" routerLinkActive="active">Manage Article</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="./user" routerLinkActive="active">Manage Users</a>
-  </li>
-</ul>
+<nav class="dash-nav">
+  <a class="nav-link" routerLink="./" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Dashboard</a>
+  <a class="nav-link" routerLink="./article" routerLinkActive="active">Articles</a>
+  <a class="nav-link" routerLink="./user" routerLinkActive="active">Users</a>
+  <a class="nav-link" routerLink="./tag" routerLinkActive="active">Tags</a>
+</nav>
 <router-outlet></router-outlet>
