--- a/src/app/admin/user-manage/user-manage.component.html
+++ b/src/app/admin/user-manage/user-manage.component.html
@@ -1,4 +1,4 @@
-<h2>User Manage</h2>
+<h3>User Manage</h3>
 <table class="table table-bordered table-hover">
   <thead class="thead-inverse">
     <tr>
@@ -6,6 +6,7 @@
       <th>First Name</th>
       <th>Last Name</th>
       <th>Username</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -14,19 +15,55 @@
       <td>Mark</td>
       <td>Otto</td>
       <td>@mdo</td>
+      <td>
+        <button class="btn btn-primary btn-sm">
+          <i class="fa fa-edit"></i> Edit
+        </button>
+        <button class="btn btn-danger btn-sm">
+          <i class="fa fa-trash"></i> Delete
+        </button>
+      </td>
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>Jacob</td>
       <td>Thornton</td>
       <td>@fat</td>
+      <td>
+        <button class="btn btn-primary btn-sm">
+          <i class="fa fa-edit"></i> Edit
+        </button>
+        <button class="btn btn-danger btn-sm">
+          <i class="fa fa-trash"></i> Delete
+        </button>
+      </td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td>Larry</td>
       <td>the Bird</td>
       <td>@twitter</td>
+      <td>
+        <button class="btn btn-primary btn-sm">
+          <i class="fa fa-edit"></i> Edit
+        </button>
+        <button class="btn btn-danger btn-sm">
+          <i class="fa fa-trash"></i> Delete
+        </button>
+      </td>
     </tr>
   </tbody>
 </table>
-
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-end">
+    <li class="page-item disabled">
+      <a class="page-link" href="#" tabindex="-1">Previous</a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#">Next</a>
+    </li>
+  </ul>
+</nav>
