--- a/src/assets/css/loader.css
+++ b/src/assets/css/loader.css
@@ -10,7 +10,7 @@ body {
 body,
 app-root {
   position: relative;
-  font: 12px/1.5em "Helvetica Neue",Helvetica,"Hiragino Sans GB","Segoe UI","Microsoft Yahei",Tahoma,Arial,STHeiti,sans-serif;
+  font: 14px/1.5em "Helvetica Neue",Helvetica,"Hiragino Sans GB","Segoe UI","Microsoft Yahei",Tahoma,Arial,STHeiti,sans-serif;
   background: #fff;
   overflow-x: hidden;
 }
@@ -33,44 +33,52 @@ app-root {
   0% {
     -webkit-transform: scale(0);
             transform: scale(0);
-    opacity: 0; }
+    opacity: 0;
+  }
 
   5% {
-    opacity: 1; }
+    opacity: 1;
+  }
 
   100% {
     -webkit-transform: scale(1);
             transform: scale(1);
-    opacity: 0; } }
+    opacity: 0;
+  }
+}
 
 .ball-scale-multiple {
   position: relative;
   -webkit-transform: translateY(-30px);
       -ms-transform: translateY(-30px);
-          transform: translateY(-30px); }
-  .ball-scale-multiple > div:nth-child(2) {
-    -webkit-animation-delay: 0.2s;
-            animation-delay: 0.2s; }
-  .ball-scale-multiple > div:nth-child(3) {
-    -webkit-animation-delay: 0.4s;
-            animation-delay: 0.4s; }
-  .ball-scale-multiple > div {
-    background-color: #fff;
-    width: 15px;
-    height: 15px;
-    border-radius: 100%;
-    margin: 2px;
-    -webkit-animation-fill-mode: both;
-            animation-fill-mode: both;
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    opacity: 0;
-    margin: 0;
-    width: 60px;
-    height: 60px;
-    -webkit-animation: ball-scale-multiple 1s 0s linear infinite;
-            animation: ball-scale-multiple 1s 0s linear infinite; }
+          transform: translateY(-30px);
+}
+.ball-scale-multiple > div:nth-child(2) {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s;
+}
+.ball-scale-multiple > div:nth-child(3) {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+.ball-scale-multiple > div {
+  background-color: #fff;
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
+  margin: 2px;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  opacity: 0;
+  margin: 0;
+  width: 60px;
+  height: 60px;
+  -webkit-animation: ball-scale-multiple 1s 0s linear infinite;
+          animation: ball-scale-multiple 1s 0s linear infinite;
+}
 .loaders {
 	width: 100%;
 	height: 100%;
