add material manage

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,8 +1,9 @@
-<h1>Dashboard</h1>
+<h1>Admin</h1>
 <nav class="dash-nav">
   <a class="nav-link" routerLink="./" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Dashboard</a>
   <a class="nav-link" routerLink="./article" routerLinkActive="active">Articles</a>
   <a class="nav-link" routerLink="./user" routerLinkActive="active">Users</a>
   <a class="nav-link" routerLink="./tag" routerLinkActive="active">Tags</a>
+  <a class="nav-link" routerLink="./material" routerLinkActive="active">Materials</a>
 </nav>
 <router-outlet></router-outlet>
