--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,14 @@
-<h3>Admin Dashboard</h3>
+<h3>Dashboard</h3>
+<div>
+  <div style="display: block; padding: 2rem;">
+    <canvas baseChart
+            [datasets]="barChartData"
+            [labels]="barChartLabels"
+            [options]="barChartOptions"
+            [legend]="barChartLegend"
+            [chartType]="barChartType"
+            (chartHover)="chartHovered($event)"
+            (chartClick)="chartClicked($event)"></canvas>
+  </div>
+  <button class="btn btn-primary btn-sm" (click)="randomize()">Update</button>
+</div>
