--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,6 @@
-<h3>Dashboard</h3>
+<h3>Dashboard <small><button class="btn btn-primary btn-sm" (click)="randomize()">Update</button></small></h3>
 <div>
-  <div style="display: block; padding: 2rem;">
+  <div class="dash-wrap">
     <canvas baseChart
             [datasets]="barChartData"
             [labels]="barChartLabels"
@@ -10,5 +10,4 @@
             (chartHover)="chartHovered($event)"
             (chartClick)="chartClicked($event)"></canvas>
   </div>
-  <button class="btn btn-primary btn-sm" (click)="randomize()">Update</button>
 </div>
