--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,9 @@
         AngularBlog
       </a>
       <ul class="nav navbar-nav">
-        <li class="nav-item" routerLinkActive="active">
+        <!--<li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/home">Home</a>
-        </li>
+        </li>-->
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/article">Article</a>
         </li>
