--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,40 +2,48 @@
 <div class="wrap">
   <!-- header -->
   <header class="header">
-    <nav class="navbar navbar-light">
-      <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar" aria-controls="exCollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation"></button>-->
+    <nav class="navbar navbar-toggleable-md navbar-light">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <a class="navbar-brand" [routerLink]="['/']">
         <img class="d-inline-block align-top" style="width: 20px; height:20px;" src="{{angularclassLogo}}" alt="Logo">
         AngularBlog
       </a>
-      <ul class="nav navbar-nav">
-        <!--<li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>-->
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/article">Article</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/about">About</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/login">Login</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/admin">Admin</a>
-        </li>
-        <!--<li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-          <div class="dropdown-menu" aria-labelledby="supportedContentDropdown">
-            <a class="dropdown-item" routerLink="home" routerLinkActive="active">Home</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" routerLink="home" routerLinkActive="active">About</a>
-          </div>
-        </li>-->
-      </ul>
-      <form class="form-inline float-xs-right">
-        <a class="btn btn-success btn-sm nav-link-write" routerLink="/article/write" >Write</a>
-      </form>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <!--<a class="navbar-brand" [routerLink]="['/']">
+          <img class="d-inline-block align-top" style="width: 20px; height:20px;" src="{{angularclassLogo}}" alt="Logo">
+          AngularBlog
+        </a>-->
+        <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+          <!--<li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="/home">Home</a>
+          </li>-->
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="/article">Article</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="/about">About</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="/login">Login</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="/admin">Admin</a>
+          </li>
+          <!--<li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <div class="dropdown-menu" aria-labelledby="supportedContentDropdown">
+              <a class="dropdown-item" routerLink="home" routerLinkActive="active">Home</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" routerLink="home" routerLinkActive="active">About</a>
+            </div>
+          </li>-->
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <a class="btn btn-success btn-sm nav-link-write" routerLink="/article/write" >Write</a>
+        </form>
+      </div>
     </nav>
   </header><!-- /header -->
   <!--<alert type="success">hello</alert>-->
