--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,7 +58,7 @@
 	<div class="container-fluid">
     <div class="row">
       <div class="col-sm-6">
-        <code class="app-state">this.appState.state = {{ appState.state | json }}</code>
+        <p>Copyright&copy; 2016 - {{currDate | date: "yyyy"}} EricThsi All Rights Reserved. </p>
       </div>
       <div class="col-sm-6">
         <p class="text-sm-right" title="">
