--- a/src/app/article/article-detail/article-detail.component.html
+++ b/src/app/article/article-detail/article-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-end top-op-wrap">
-    <button (click)="gotoBlog()" class="btn btn-secondary btn-sm float-xs-right">Back</button>
+    <button (click)="gotoBlog()" class="btn btn-link btn-sm float-xs-right">Back</button>
   </div>
   <h1>{{article.id}} <small>{{article | json}}</small></h1>
   <ul class="list-inline">
