--- a/src/app/article/article.component.scss
+++ b/src/app/article/article.component.scss
@@ -1,6 +1,9 @@
 .tag-wrap {
   padding: 1rem 0 1.5rem;
   font-size: 1rem;
+  a.badge {
+    color: #fff;
+  }
 }
 .article-item {
   padding-bottom: 1rem;
