add disqus comment

--- a/src/app/article/article-detail/article-detail.component.html
+++ b/src/app/article/article-detail/article-detail.component.html
@@ -62,4 +62,5 @@ sudo apt-get update && sudo apt-get install yarn
 ```
 
   </div>
+  <!--<disqus [shortname]="disqusShortname" [identifier]="pageIdentifier" ></disqus>-->
 </div>
