--- a/src/app/article/article-detail/article-detail.component.html
+++ b/src/app/article/article-detail/article-detail.component.html
@@ -2,7 +2,10 @@
   <div class="row justify-content-end top-op-wrap">
     <button (click)="gotoBlog()" class="btn btn-link btn-sm float-xs-right">Back</button>
   </div>
-  <h1>{{article.id}} <small>{{article | json}}</small></h1>
+  <h1 class="article-title">
+    {{article.id}}
+    <!--<small>{{article | json}}</small>-->
+  </h1>
   <ul class="list-inline">
     <li class="list-inline-item">
       <i class="fa fa-book"></i>Read {{article.read}}
