replace mock data source

--- a/src/app/article/article-detail/article-detail.component.html
+++ b/src/app/article/article-detail/article-detail.component.html
@@ -8,15 +8,15 @@
   </h1>
   <ul class="list-inline">
     <li class="list-inline-item">
-      <i class="fa fa-book"></i>Read {{article.read}}
+      <i class="fa fa-book"></i>Read {{article.visit_count}}
     </li>
     -
     <li class="list-inline-item">
-      <i class="fa fa-comment"></i>Comment {{article.comment}}
+      <i class="fa fa-comment"></i>Comment {{article.comment_count}}
     </li>
     -
     <li class="list-inline-item">
-      <i class="fa fa-heart"></i>Love {{article.love}}
+      <i class="fa fa-heart"></i>Love {{article.love_count}}
     </li>
   </ul>
   <div Markdown>
